# mcp-usecase

./: .env.example  .gitignore  Cursor_Tools_프롬프트.txt  README.md  README_KR.md  claude_desktop_config.json  mcp_server.py  pyproject.toml  requirements.txt  setup_claude_json.py
api/: README.md  app.py  pyproject.toml
case0/: auto_mcp_json.py  mcp_http_server.py  mcp_stdio_server.py  mcp_stdio_stock_server.py
case1/: .env.example  auto_mcp_json.py  config.py  mcp_config.json  mcp_server.py
case2/: auto_mcp_json.py  mcp_server.py
case3/: auto_mcp_json.py
case4/: auto_mcp_json.py  mcp_server.py
docs/: case1.md  case2.md  case4.md  example1.md  example2.md  example3.md  rag_sequence_diagram.md
example1/: mcp.py  mcp_auto_json.py  mcp_server.py  rag.py
example1/rag/: base.py  pdf.py
example2/: dify_ek_api.py  mcp.py  mcp_auto_json.py  mcp_server.py
example3/: mcp.py  mcp_auto_json.py  mcp_server.py
example4/: mcp.py  mcp_auto_json.py  mcp_server.py
level_intermediate/: mcp.py
mcp/: dify_knowledge_mcp.py  pyproject.toml  run_mcp.sh
