[project]
name = "dify-external-api"
version = "0.1.0"
description = "Dify External API"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.115.11,<0.116.0",
    "uvicorn>=0.34.0,<0.35.0",
    "pdfplumber>=0.11.5,<0.12.0",
    "langchain>=0.3.20,<0.4.0",
    "langchain-openai>=0.3.7,<0.4.0",
    "langchain-chroma>=0.2.2,<0.3.0",
    "chromadb>=0.6.3,<0.7.0",
    "pydantic>=2.10.6,<3.0.0",
    "langgraph>=0.3.5,<0.4.0",
    "langchain-community>=0.3.19,<0.4.0",
    "rank-bm25>=0.2.2,<0.3.0",
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"