[project]
name = "claude-dify-mcp"
version = "0.1.0"
description = "Claude Dify MCP"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"